--- a/src/components/qualification/qualification.css
+++ b/src/components/qualification/qualification.css
@@ -11,7 +11,8 @@
 .qualification__button {
     font-size: var(--h3-font-size);
     font-weight: var(--font-medium);
-    color: var(--title-color);
+    /* color: var(--title-color); */
+    color: var(--title-color-qualification);
     margin: 0 var(--mb-1);
     cursor: pointer;
 }
