--- a/src/components/Portfolio/work.css
+++ b/src/components/Portfolio/work.css
@@ -1,7 +1,7 @@
 .work__container {
   gap: 3rem;
   grid-template-columns: repeat(2, max-content);
-  justify-content: center;
+  justify-content: center;  
 }
 
 .work__filters {
@@ -30,12 +30,20 @@
   background-color: var(--container-color);
   border: 1px solid rgba(0, 0, 0, 0.1);
   padding: 1.25rem;
+  width: 340px;
   border-radius: 1rem;
 }
 
+.work__card__div{
+  display: flex;
+  margin: auto;
+  justify-content: center;  
+}
 .work__img {
-  width: 295px;
+  width: 320px;
+  height: 180px;
   border-radius: 1rem;
+  object-fit: cover;
   margin-bottom: var(--mb-1);
 }
 
@@ -45,7 +53,17 @@
   margin-bottom: var(--mb-0-5);
 }
 
+.work__desc {
+  font-size: var(--small-font-size);
+  font-weight: var(--small-font-size);
+}
+
+.work__buttom__div{
+  display: flex;
+  
+}
 .work__button {
+  padding-right: 20px;
   width: max-content;
   color: var(--text-color);
   font-size: var(--small-font-size);
