--- a/src/components/Portfolio/work.css
+++ b/src/components/Portfolio/work.css
@@ -30,7 +30,8 @@
   background-color: var(--container-color);
   border: 1px solid rgba(0, 0, 0, 0.1);
   padding: 1.25rem;
-  width: 340px;
+  /* width: 340px; */
+  width: 440px;
   border-radius: 1rem;
 }
 
@@ -40,8 +41,10 @@
   justify-content: center;  
 }
 .work__img {
-  width: 320px;
-  height: 180px;
+  /* width: 320px; */
+  width: 420px;
+  /* height: 180px; */
+  height: 280px;
   border-radius: 1rem;
   object-fit: cover;
   margin-bottom: var(--mb-1);
