--- a/src/components/Portfolio/work.css
+++ b/src/components/Portfolio/work.css
@@ -122,8 +122,14 @@
     grid-template-columns: 1fr;
   }
 
+  .work__card{
+    width: 90%;
+    height: 100%;
+  }
+
   .work__img {
-    width: 100%;
+    width: 90%;
+    height: 90%;
   }
 }
 
@@ -138,10 +144,12 @@
   }
 
   .work__card{
-    width: 80%
+    width: 75%;
+    height: 100%;
   }
 
   .work__img {
-    width: 80%;
+    width: 75%;
+    height: 75%;
   }
 }
