--- a/src/components/Portfolio/work.css
+++ b/src/components/Portfolio/work.css
@@ -1,7 +1,7 @@
 .work__container {
   gap: 3rem;
   grid-template-columns: repeat(2, max-content);
-  justify-content: center;  
+  justify-content: center;
 }
 
 .work__filters {
@@ -35,11 +35,12 @@
   border-radius: 1rem;
 }
 
-.work__card__div{
+.work__card__div {
   display: flex;
   margin: auto;
-  justify-content: center;  
+  justify-content: center;
 }
+
 .work__img {
   /* width: 320px; */
   width: 420px;
@@ -61,10 +62,11 @@
   font-weight: var(--small-font-size);
 }
 
-.work__buttom__div{
+.work__buttom__div {
   display: flex;
-  
+
 }
+
 .work__button {
   padding-right: 20px;
   width: max-content;
@@ -95,11 +97,25 @@
 @media screen and (max-width: 992px) {
   .work__container {
     gap: 1.25rem;
+    grid-template-columns: repeat(2, max-content);
+    justify-content: center;
+    /* display: flex; */
+    align-items: center;
   }
 
   .work__card {
     padding: 1rem;
+    margin: auto;
+    justify-content: center;
   }
+
+
+  .work__card__div {
+    display: flex;
+    margin: auto;
+    justify-content: center;
+  }
+
 
   .work__img {
     margin-bottom: 0.75rem;
@@ -113,16 +129,19 @@
 /* For medium devices */
 @media screen and (max-width: 768px) {
   .work__container {
-    grid-template-columns: max-content;
+    justify-content: center;
+    grid-template-columns: 1fr;
   }
 }
 
 @media screen and (max-width: 576px) {
   .work__container {
+    justify-content: center;
     grid-template-columns: 1fr;
   }
 
-  .work__card{
+  .work__card {
+    margin: auto;
     width: 90%;
     height: 100%;
   }
@@ -143,7 +162,8 @@
     column-gap: 0.25rem;
   }
 
-  .work__card{
+  .work__card {
+    margin: auto;
     width: 75%;
     height: 100%;
   }
